[package]
name = "kvs"
version = "0.1.0"
authors = ["Vifly <viflythink@gmail.com>"]
description = "A key-value store"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "2.0"
predicates = "2.0"
tempfile = "3.0.7"
walkdir = "2.2.7"
clap = { version = "3.0.0-beta.5", features = ["yaml"] }
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
